[tool.poetry]
name = "mousehunt"
version = "0.1.0"
description = ""
authors = ["yingqi16 <yingqi0616@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pathlib = "^1.0.1"
mysql-connector-python = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
